--- a/Sound_amp_kursach/Sound_amp_kursach.csproj
+++ b/Sound_amp_kursach/Sound_amp_kursach.csproj
@@ -92,6 +92,12 @@
     <Compile Include="PlayInputDevice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recorder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recorder.Designer.cs">
+      <DependentUpon>Recorder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Start_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +116,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Recorder.resx">
+      <DependentUpon>Recorder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Start_Form.resx">
       <DependentUpon>Start_Form.cs</DependentUpon>
     </EmbeddedResource>
